--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -4,11 +4,11 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Roboto",sans-serif;
 }
 
 .container{
-    width:86%;
+    width:960px;
     margin:0 auto;
     border:1px solid red;
 }
