--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,4 +2,6 @@
 @import '../scss/pages/home';
 @import '../scss/components/header';
 @import '../scss/components/footer';
+@import '../scss/components/instagram';
+@import '../scss/components/about-us';
 @import '../scss/mixins'
