--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -13,3 +13,34 @@
         text-underline-offset:0;
     }
 }
+
+// @mixin hero($bg-image){
+//     main{
+//         padding-top: 100px;
+//         .about-hero{
+//         width:100%;
+//         height: 380px;
+//         background-image: $bg-image;
+//         background-repeat: no-repeat;
+//         color:white;
+//         .container{
+//             .row{
+//                 height: 380px;
+//                 display: flex;
+//                 justify-content: center;
+//                 align-items: center;
+//                 .hero-content{
+//                     h2{
+//                         color: #fff;
+//                         font-size: 60px;
+//                         display: block;
+//                         font-weight: 700;
+//                         line-height: 1.4;
+//                         font-family: "Josefin Sans",sans-serif;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     }
+// }
