--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,7 +1,13 @@
 @import '../scss/base';
 @import '../scss/pages/home';
+@import '../scss/pages/about';
+@import '../scss/pages/events';
 @import '../scss/components/header';
 @import '../scss/components/footer';
 @import '../scss/components/instagram';
 @import '../scss/components/about-us';
+@import '../scss/components/testimonial';
+@import '../scss/components/video';
+@import '../scss/components/faq';
+@import '../scss/components/events';
 @import '../scss/mixins'
