--- a/assets/scss/components/_about-us.scss
+++ b/assets/scss/components/_about-us.scss
@@ -8,7 +8,6 @@
             gap:30px;
             padding:100px 0;
             .about-content{
-                // padding: 0 15px;
                 span{
                     font-size:16px;
                     color:#7EA0FF;
@@ -37,6 +36,22 @@
                 .about-button{
                     @include button(#FFC800, 30px 40px);
                     margin:0;
+                }
+            }
+        }
+    }
+}
+@media (max-width:320px){
+    .about-us{
+        .container{
+            width: 100%;
+            .row{
+                flex-direction: column;
+                padding: 50px 0;
+                .about-image{
+                    img{
+                        width: 100%;
+                    }
                 }
             }
         }
