--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin button($bgrClr, $pad){
-    margin:25px 0 25px 40px;
+    // margin:25px 0 25px 40px;
     background-color: $bgrClr;
     color:#fff;
     border-radius: 5px;
