--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,32 +3,51 @@ main{
     .hero{
         width:100%;
         .container{
-            .hero-details{
+            .row{
+                padding-top: 100px;
                 display: flex;
-                flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                gap:10px;
-                padding-top: 150px;
-                h1{
-                    font-size: 50px;
-                    text-align: center;
-                    span{
-                        margin:8px 0;
-                        hr{
-                            border: 5px solid #FFC800;
-                            margin-top: -20px;
-                            width:100px;
+                .hero-details{
+                    width:770px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    gap:10px;
+                    h1{ 
+                        font-family: "Josefin Sans",sans-serif;
+                        color: #00095E;
+                        font-weight: 700;
+                        line-height: 1.2;
+                        font-size: 60px;
+                        text-align: center;
+                        span{
+                            margin:8px 0;
+                            &::before{
+                                position: absolute;
+                                content: "";
+                                height: 10px;
+                                background: #FFC800;
+                                width: 475px;
+                                display: inline-block;
+                                top: 72%;
+                                z-index: -1;        
+                                text-align: center;
+                                left: 0;
+                                right: 0;
+                                margin: 0 auto;
+                            }
                         }
                     }
-                }
-                p{
-                    font-size: 20px;
-                    margin-bottom: 30px;
-                    font-family: 'Roboto', sans-serif;
-                }
-                .hero-button{
-                    @include button(#00095e,35px 60px);
+                    p{
+                        font-size: 20px;
+                        margin-bottom: 30px;
+                        font-family: 'Roboto', sans-serif;
+                    }
+                    .hero-button{
+                        @include button(#0c0c1f,25px 60px);
+                    }
                 }
             }
         }
