--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -8,87 +8,81 @@ header{
         align-items: center;
         position: fixed;
         z-index: 1;
-        padding: 0 30px;
+        padding:20px 30px;
         box-shadow: 0 10px 15px rgba(25,25,25,0.1);
-        .menu{
-            display: flex;
-            .main-menu{
-                display:flex;
-                gap:40px;
-                .menu-item{
-                    a{
-                        font-size: 16px;
-                        font-weight: 500;
-                        display:inline-block;
-                        color:#00095E;
-                        padding: 39px 2px;
-                        transition: all .3s ;
-                        &:hover{
-                            color: #0056b3;
-                            text-decoration: underline;
-                            text-underline-offset: 13px;
-                        }
-                    }
-                }
-                .dropdown{
-                    a{
-                        font-size: 16px;
-                        font-weight: 500;
-                        display:inline-block;
-                        color:#00095E;
-                        padding: 39px 2px;
-                        transition: all .3s ;
-                        &:hover{
-                            color: #0056b3;
-                            text-decoration: underline;
-                            text-underline-offset: 13px;
-                        }
-                    }
-                    .dropdown-items{
-                        position: absolute;
-                        visibility: hidden;
-                        margin-left: 7px;
-                        background-color: #00095e;
-                        box-shadow: 0 0 10px 3px rgba(0,0,0,0.05);
-                        a{
-                            color:white;
-                            font-size: 16px;
-                            font-weight: 500;
-                            width:170px;
-                            padding: 17px;
-                            &:hover{
-                                text-decoration: none;
-                            }
-                        }
-                    }
+        .main-menu{
+            display:flex;
+            align-items: center;
+            flex-direction: row;
+            gap:40px;
+            padding: 0 30px;
+            .menu-item{
+                a{
+                    font-family: "Josefin Sans",sans-serif;
+                    font-size: 16px;
+                    font-weight: 500;
+                    display:inline-block;
+                    color:#00095E;
+                    transition: all .3s;
                     &:hover{
-                        .dropdown-items{
-                            visibility: visible;
-                        }
+                        color: #0056b3;
+                        text-decoration: underline;
+                        text-underline-offset: 13px;
+                    }
+                }
+                .phone{
+                    @include button(#FFC800,13px 30px);
+                    font-family: "Josefin Sans",sans-serif;
+                    &:hover{
+                        opacity: 0.8;
+                        color:#fff;
+                        text-decoration: none;
+                        text-underline-offset:0;
                     }
                 }
             }
-            .phone{
-                @include button(#FFC800,13px 30px);
+            .dropdown{
+                a{  
+                    font-family: "Josefin Sans",sans-serif;
+                    font-size: 16px;
+                    font-weight: 500;
+                    display:inline-block;
+                    color:#00095E;
+                    transition: all .3s ;
+                    &:hover{
+                        color: #0056b3;
+                        text-decoration: underline;
+                        text-underline-offset: 13px;
+                    }
+                }
+                .dropdown-items{
+                    position: absolute;
+                    visibility: hidden;
+                    margin-left: 7px;
+                    margin-top: 40px;
+                    background-color: #00095e;
+                    box-shadow: 0 0 10px 3px rgba(0,0,0,0.05);
+                    a{
+                        font-family: "Josefin Sans",sans-serif;
+                        color:white;
+                        font-size: 16px;
+                        font-weight: 500;
+                        width:170px;
+                        padding: 17px;
+                        transition: all .3s;
+                        &:hover{
+                            text-decoration: none;
+                            left:3px;
+                            position: relative;
+                        }
+                    }
+                }
+                &:hover{
+                    .dropdown-items{
+                        visibility: visible;
+                    }
+                }
             }
-            // .phone{
-            //         margin:25px 0 25px 40px;
-            //         background-color: #FFC800;
-            //         color:#fff;
-            //         border-radius: 5px;
-            //         padding: 13px 30px;
-            //         display: inline-block;
-            //         transition: .3s ;
-            //         i{
-            //             padding-right:9px;
-            //         }
-            //         &:hover{
-            //             opacity: 0.8;
-            //             color:#fff;
-            //             text-decoration: none;
-            //             text-underline-offset:0;
-            //         }
-            //     }
-        }
+        }  
     }
 }
